--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Manrope-Regular', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +8,42 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@font-face {
+  font-family: 'Manrope-Regular';
+  src: url('fonts/Manrope-VariableFont_wght.ttf') format('truetype');
+  font-weight: normal;
+}
+@font-face {
+  font-family: 'Manrope-Bold';
+  src: url('fonts/Manrope-VariableFont_wght.ttf') format('truetype');
+  font-weight: normal;
+}
+@font-face {
+  font-family: 'Switzer-Light';
+  src: url('fonts/Switzer-Light.otf') format('truetype');
+  font-weight: normal;
+}
+@font-face {
+  font-family: 'Switzer-Regular';
+  src: url('fonts/Switzer-Regular.otf') format('truetype');
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'Switzer-Medium';
+  src: url('fonts/Switzer-Medium.otf') format('truetype');
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'Switzer-Bold';
+  src: url('fonts/Switzer-Bold.otf') format('truetype');
+  font-weight: bold;
+}
+@font-face {
+  font-family: 'CoveredByYourGrace-Regular';
+  src: url('fonts/CoveredByYourGrace-Regular.ttf') format('truetype');
+  font-weight: normal;
 }
