--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,50 +2,55 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #F5F5F5;
-   /* Set your desired background color */
-  padding: 20px 20px; /* Adjust padding as needed */
-  border-radius: 20px; /* Adjust border-radius for rounded corners */
-  margin: 20px; /* Adjust margin as needed */
+  background-color: #f5f5f5;
+
+  padding: 20px 20px;
+  border-radius: 20px;
+  margin: 20px;
 }
 
+.copyright-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  font-family: "Switzer-Light";
+  font-size: 15px;
+}
 
-  .copyright-container {
-    display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    height: 100%; /* Ensure the container takes full height */
-    font-family: 'Switzer-Light'; 
-    font-size: 15px;
-  }
-  
-  .logo-img {
-    height: 20px;
-    width: auto;
-  }
-  
-  .buttons {
-    display: flex;
-  }
+.logo-img {
+  height: 20px;
+  width: auto;
+}
 
-  .btn-text{
-    text-decoration: underline dotted;
-    font-family: 'Switzer-Light'; 
-    font-size: 15px;
-  }
-  
-  /* RoundedButton.css */
-  
-  .rounded-button {
-    border: none;
-    border-radius: 20px; /* Adjust border-radius for rounded corners */
-    background-color: #007bff; /* Set your desired button background color */
-    color: white; /* Set your desired button text color */
-    padding: 10px 20px; /* Adjust padding as needed */
-    margin-left: 10px; /* Adjust margin between buttons */
-  }
-  
-  .rounded-button:hover {
-    background-color: #0056b3; /* Set your desired button hover background color */
-  }
-  
+.buttons {
+  display: flex;
+}
+
+.btn-text {
+  text-decoration: underline dotted;
+  font-family: "Switzer-Light";
+  font-size: 15px;
+}
+
+.rounded-button {
+  border: none;
+  border-radius: 20px;
+  background-color: #007bff;
+  color: white;
+  padding: 10px 20px;
+  margin-left: 10px;
+}
+
+.rounded-button:hover {
+  background-color: #0056b3;
+}
+a:link {
+  text-decoration: inherit;
+  color: inherit;
+}
+
+a:visited {
+  text-decoration: inherit;
+  color: inherit;
+}
