--- a/src/pages/HomeScreen/HomeScreen.css
+++ b/src/pages/HomeScreen/HomeScreen.css
@@ -1,5 +1,3 @@
-/* HomeScreen.css */
-
 .content {
   padding: 20px;
 }
@@ -11,7 +9,7 @@
 .vertical-text {
   display: flex;
   flex-direction: column;
-  align-items: center; /* Center children horizontally */
+  align-items: center; 
 }
 
 .subtext {
@@ -29,7 +27,7 @@
 
 .two-columns {
   display: flex;
-  flex-wrap: wrap; /* Allow columns to wrap to the next line */
+  flex-wrap: wrap; 
 }
 
 .left-column {
@@ -37,20 +35,23 @@
   margin-right: 20px;
 }
 
-.success-img {
-  max-width: 100%; /* Ensure image doesn't exceed its container */
-  height: auto; /* Maintain aspect ratio */
+.carousel-image {
+  max-width: 100%; 
+  height: auto; 
 }
 
 .right-column {
   flex: 1;
   display: flex;
-  flex-direction: column; /* Align children vertically */
-  position: relative; /* Position the button relative to this container */
+  flex-direction: column; 
+  position: relative; 
+  height: auto;
 }
 
+
 .carousel-text {
-  font-size: 20px;
+  width: 50%;
+  font-size: 30px;
   font-family: 'Switzer-Medium';
   text-align: left;
   margin-bottom: 20px;
@@ -58,8 +59,8 @@
 
 .carousel-dots {
   display: flex;
-  justify-content: center; /* Center dots horizontally */
-  margin-bottom: 20px; /* Add margin bottom for spacing */
+  justify-content: flex-start; 
+  margin-bottom: 20px; 
 }
 
 .dot {
@@ -67,7 +68,7 @@
   height: 10px;
   border-radius: 50%;
   background-color: #ccc;
-  margin: 0 5px; /* Add margin between dots */
+  margin: 0 5px; 
   cursor: pointer;
 }
 
@@ -76,22 +77,23 @@
 }
 
 .carousel-button {
-  margin-top: auto; /* Push the button to the bottom */
-  text-align: center; /* Center the button horizontally */
 }
 
-/* Add media queries for responsiveness */
 @media only screen and (max-width: 768px) {
   .two-columns {
-    flex-direction: column; /* Stack columns vertically on smaller screens */
+    flex-direction: column; 
   }
 
   .left-column {
-    margin-right: 0; /* Remove right margin on smaller screens */
-    margin-bottom: 20px; /* Add bottom margin for spacing */
+    margin-right: 0; 
+    margin-bottom: 20px; 
   }
 
   .right-column {
-    margin-bottom: 20px; /* Add bottom margin for spacing */
+    margin-bottom: 20px; 
+  }.carousel-text {
+    width: 100%;
+    font-size: 20px;
   }
+  
 }
